test/org/midica/testfiles/failing/eff-func-param-too-low-2.midica
INCLUDE inc/instruments.midica


0: vol.line(1,-0.000001%)
